--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,7 +20,8 @@ security:
          form_login:
             login_path: security.login
             check_path: security.login
-
+            enable_csrf: true
+            default_target_path: realEstate.home
          logout:
             path: security.logout
             target: security.login
